@@ -1,3 +1,11 @@
+2007-10-17  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * JavaScriptCore.pri: Add FastMallocPCRE.cpp.
+        * pcre/pcre_get. #if out two functions that depend on pcre_get_stringnumber, which
+        is currently unavailable for UTF-16.
+
 2007-10-16  Darin Adler  <darin@apple.com>
 
         Reviewed by Geoff.
